# auto-oidc

./: .env.example  .gitignore  .local-ci.toml  .pre-commit-config.yaml  .prettierignore  App.tsx  AutomationHubWorker.ts  CONTRIBUTING.md  LICENSE  Makefile  README.md  constants.tsx  eslint.config.js  index.html  metadata.json  package.json  prettier.config.js  tsconfig.app.json  tsconfig.node.json  types.ts  vite.config.ts
.github/workflows/: lint-and-format.yml  test-and-build.yml
backend/: Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  default.nix
backend/src/: config.rs  handlers.rs  main.rs  models.rs  oidc.rs
src/: main.tsx
src/hooks/: useAnalyze.ts  useNodeSelection.ts  useViewMode.ts
src/pages/: App.tsx
src/services/: gemini.service.ts
src/styles/: globals.css
src/utils/: constants.ts  types.ts
