[package]
name = "ai-agent-oidc-hub"
version = "0.1.0"
edition = "2021"
description = "Auto-OIDC Hub - Distributed trust and identity management for service-to-service authentication"
authors = ["Lornu AI <engineering@lornu.ai>"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"

[dev-dependencies]
mockall = "0.11"
