[package]
name = "ai-agent-oidc-hub"
version = "0.1.0"
edition = "2021"
description = "Auto-OIDC Hub - Distributed trust and identity management for service-to-service authentication"
authors = ["Lornu AI <engineering@lornu.ai>"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
jsonwebtoken = "9.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
